--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             &#9776; <!-- Это символ меню из трех горизонтальных полос -->
         </div>
          <h1>Sergei Gepshtein's Portal</h1>
-         <div class="search-icon" onclick="toggleSearch()">
-            &#128269; <!-- Символ лупы -->
-        </div>
+         <!-- <div class="search-icon" onclick="toggleSearch()">
+            &#128269; // Символ лупы 
+        </div> -->
       </header>
       <nav id="menu" class="hidden">
          <div class="close-menu" onclick="toggleMenu()">
@@ -36,13 +36,13 @@
          <button onclick="searchSite()">Search</button>
          <button onclick="toggleSearch()">&times;</button>
      </div> -->
-     <div id="search" class="hidden">
+     <!-- <div id="search" class="hidden">
       <div class="close-search" onclick="toggleSearch()">
         &times; <!-- Символ крестика -->
       </div>
       <input type="text" id="searchInput" placeholder="Search...">
       <button onclick="searchSite()">Search</button> <!-- Добавьте эту строку -->
-    </div>
+    </div> -->
    <button id="Filter" onclick = "toggleDisplay();"> Filter</button>
    <button onclick="processSelection()">Apply</button>
    <span id ="Btns" style = "display:none;">
