--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
      </div> -->
      <!-- <div id="search" class="hidden">
       <div class="close-search" onclick="toggleSearch()">
-        &times; <!-- Символ крестика -->
+        &times; // Символ крестика 
       </div>
       <input type="text" id="searchInput" placeholder="Search...">
-      <button onclick="searchSite()">Search</button> <!-- Добавьте эту строку -->
+      <button onclick="searchSite()">Search</button> // Добавьте эту строку 
     </div> -->
    <button id="Filter" onclick = "toggleDisplay();"> Filter</button>
    <button onclick="processSelection()">Apply</button>
