--- a/index.html
+++ b/index.html
@@ -11,19 +11,23 @@
    </head> 
    <!-- <body  onload="console.log(getNow())">  -->
    <body>   
-      <div id = "Publications" style="border: 1px solid black; padding: 10px; padding-top: 20px; box-sizing: border-box; margin-top: 130px;">
+      <div id = "Publications" style="border: 1px solid black; padding: 10px; padding-top: 20px; box-sizing: border-box; margin-top: 90px;">
       <header>
+      <!-- <div class="header"> -->
          <div class="menu-icon" onclick="toggleMenu()">
-            &#9776; <!-- Это символ меню из трех горизонтальных полос -->
+             &#9776; <!-- Это символ меню из трех горизонтальных полос  -->
         </div>
-         <h1>Sergei Gepshtein's Portal</h1>
+        <div class="header-content">
+            <h3>Sergei Gepshtein's Portal</h3>
+         </div>
          <!-- <div class="search-icon" onclick="toggleSearch()">
             &#128269; // Символ лупы 
         </div> -->
+      <!-- </div> -->
       </header>
       <nav id="menu" class="hidden">
          <div class="close-menu" onclick="toggleMenu()">
-            &times; <!-- Символ крестика -->
+            &times; // Символ крестика 
          </div>
          <ul>
             <li><a href="#About">About</a></li>
