--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </header>
       <nav id="menu" class="hidden">
          <div class="close-menu" onclick="toggleMenu()">
-            &times; // Символ крестика 
+            &times; <!-- Символ крестика -->
          </div>
          <ul>
             <li><a href="#About">About</a></li>
