--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
              &#9776; <!-- Это символ меню из трех горизонтальных полос  -->
         </div>
         <div class="header-content">
-            <h3>Sergei Gepshtein's Portal</h3>
+           <h3>Sergei Gepshtein's Portal <br><br> Publications: a sample</h3>
          </div>
          <!-- <div class="search-icon" onclick="toggleSearch()">
             &#128269; // Символ лупы 
