--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
              &#9776; <!-- Это символ меню из трех горизонтальных полос  -->
         </div>
         <div class="header-content">
-           <h3>Sergei Gepshtein's Portal <br><br> Publications: a sample</h3>
+         <div class="header-row">
+            <h3>Sergei Gepshtein's Portal</h3>
+        </div>
+        <div class="header-second-row">
+            <h3>Publications: a sample</h3>
+        </div>
+            <!-- <h3>Sergei Gepshtein's Portal <br><br> Publications: a sample<br></h3> -->
          </div>
+         
          <!-- <div class="search-icon" onclick="toggleSearch()">
             &#128269; // Символ лупы 
         </div> -->
@@ -27,7 +34,7 @@
       </header>
       <nav id="menu" class="hidden">
          <div class="close-menu" onclick="toggleMenu()">
-            &times; <!-- Символ крестика -->
+             &times;  <!-- Символ крестика  -->
          </div>
          <ul>
             <li><a href="#About">About</a></li>
