--- a/Publications.html
+++ b/Publications.html
@@ -8,7 +8,7 @@
  </head> 
  <body> 
 
- <div id = "Publications" class="publication">
+ <div id = "Publications" class="main">
  <header>
 <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
  <div class="header-content"><div class="header-row"><h3>Sergei Gepshtein's Portal</h3></div>
