--- a/Publications.html
+++ b/Publications.html
@@ -14,7 +14,7 @@
  <div class="header-content"><div class="header-row"><h3>Sergei Gepshtein's Portal</h3></div>
  <div class="header-second-row"> <h3>Publications</h3> </div></div> </header>
 <nav id="menu" class="hidden"><div class="close-menu" onclick="toggleMenu()">&times;</div>
-<ul> <li><a href="#About">About</a></li> <li><a href="#Publications">Publications</a></li> </ul> </nav>
+<ul> <li><a href="#About">About</a></li> <li><a href="Projects.html">Projects</a></li> </ul> </nav>
 <span>
 <button id="Filter" onclick = "toggleDisplay();"> Filter</button>
 <button onclick="processSelection()">Apply</button>
