--- a/Projects.html
+++ b/Projects.html
@@ -11,7 +11,7 @@
  <div id = "Projects" class="main">
  <header>
 <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
- <div class="header-content"><div class="header-row"><h3>Sergei Gepshtein's Portal</h3></div>
+ <div class="header-content"><div class="header-row"><h3>Sergei Gepshtein's Portal</h3></div><br>
  <div class="header-second-row"> <h3>Projects</h3> </div></div> </header>
 <nav id="menu" class="hidden"><div class="close-menu" onclick="toggleMenu()">&times;</div>
 <ul> <li><a href="#About">About</a></li> <li><a href="Publications.html">Publications</a></li> </ul> </nav>
