--- a/Projects.html
+++ b/Projects.html
@@ -12,7 +12,7 @@
  <header>
 <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
  <div class="header-content"><div class="header-row"><h3>Sergei Gepshtein's Portal</h3></div><br>
- <div class="header-second-row"> <h3>Sergei Gepshtein | Projects: a sample</h3> </div><br></div> </header>
+ <div class="header-second-row"> <h3>Projects</h3> </div><br></div> </header>
 <nav id="menu" class="hidden"><div class="close-menu" onclick="toggleMenu()">&times;</div>
 <ul> <li><a href="About.html">About</a></li> <li><a href="Publications.html">Publications</a></li><li><a href="Projects.html">Projects</a></li> </ul> </nav>
 <span>
