--- a/About.html
+++ b/About.html
@@ -1,31 +1,113 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>About</title>
+    <link rel="stylesheet" href="styles.css" />
+    <script src="scripts.js"></script>
   </head>
-  <body style="font: medium Calibri;">
-<div>
-Dr. Sergei Gepshtein is a scientist working in the areas of perceptual psychology, systems neuroscience, and computational neuroscience. His research interests include perception of visual depth and movement, perceptual organization, interaction of vision with other senses, planning of multistep actions, perception of high-dimensional visual pasterns, such as faces, dynamics of cortical neural networks, their modeling and simulation. 
-<br><br>
-For the last 17 years he has been a member of the Center for the Neurobiology of Vision at the Salk Institute for Biological Studies in La Jolla, California, where he studies perception and active behavior from the mechanistic perspective of neuroscience and from a perspective that respects experience as a self-contained area of research. 
-<br><br>
-He directs studies of Adaptive Sensory Technologies at the Salk Institute with the goal to translate results of basic science for applications ranging from immersive visual technologies and adaptive sighting devices to urban design and forensic science. Recently, he joined the faculty of the University of Southern California, Los Angeles, where he directs the Center for Spatial Perception & Concrete Experience: a platform for investigating spatial experience as a natural narrative process. 
-<br><br>
-His work has been supported by grants and awards from the National Eye Institute, the National Institute on Aging, the National Science Foundation, the Kavli Institute for Brain and Mind, the Swartz Foundation for Theoretical Neuroscience, and the National Institutes of Natural Sciences of Japan. 
-<br><br>
-On the applied and translational sides of scientific work, he is increasingly interested in studies of the built environment and design of immersive media: as a founding member of the World Building Institute, as the inaugural recipient of the Harold Hay Research Award from the Academy of Neuroscience for Architecture (ANFA) and as a member of the Freeman Design Leadership Council (now Emeritus). In 2016 he joined the Board of Directors of ANFA, to further the growing understanding of human response to the built environment. In 2026 he will serve as the President of ANFA.
-<br><br>
-In teaching and education, he has developed a curriculum that integrates diverse concepts of space from the disciplines of science and design, using it to teach undergraduate and graduate courses at the University of Southern California in Los Angeles, the New School of Architecture and Design in San Diego, and the University of California San Diego. Dr. Sergei Gepshtein is a scientist working in the areas of perceptual psychology, systems neuroscience, and computational neuroscience. His research interests include perception of visual depth and movement, perceptual organization, interaction of vision with other senses, planning of multistep actions, perception of high-dimensional visual pasterns, such as faces, dynamics of cortical neural networks, their modeling and simulation. 
-<br><br>
-For the last 17 years he has been a member of the Center for the Neurobiology of Vision at the Salk Institute for Biological Studies in La Jolla, California, where he studies perception and active behavior from the mechanistic perspective of neuroscience and from a perspective that respects experience as a self-contained area of research. 
-<br><br>
-He directs studies of Adaptive Sensory Technologies at the Salk Institute with the goal to translate results of basic science for applications ranging from immersive visual technologies and adaptive sighting devices to urban design and forensic science. Recently, he joined the faculty of the University of Southern California, Los Angeles, where he directs the Center for Spatial Perception & Concrete Experience: a platform for investigating spatial experience as a natural narrative process. 
-<br><br>
-His work has been supported by grants and awards from the National Eye Institute, the National Institute on Aging, the National Science Foundation, the Kavli Institute for Brain and Mind, the Swartz Foundation for Theoretical Neuroscience, and the National Institutes of Natural Sciences of Japan. 
-<br><br>
-On the applied and translational sides of scientific work, he is increasingly interested in studies of the built environment and design of immersive media: as a founding member of the World Building Institute, as the inaugural recipient of the Harold Hay Research Award from the Academy of Neuroscience for Architecture (ANFA) and as a member of the Freeman Design Leadership Council (now Emeritus). In 2016 he joined the Board of Directors of ANFA, to further the growing understanding of human response to the built environment. In 2026 he will serve as the President of ANFA.
-<br><br>
-In teaching and education, he has developed a curriculum that integrates diverse concepts of space from the disciplines of science and design, using it to teach undergraduate and graduate courses at the University of Southern California in Los Angeles, the New School of Architecture and Design in San Diego, and the University of California San Diego. 
-</div>
-</body>
+  <body onload="highlightCurrentPage();"> 
+  <div id = "About" class="main">
+    <header>
+      <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
+      <nav id="menu" class="hidden">
+          <ul> 
+              <li><a href="About.html">About</a></li> 
+              <li><a href="Publications.html">Publications</a></li>
+              <li><a href="Projects.html">Projects</a></li> 
+          </ul> 
+      </nav>
+      <div class="header-content">
+          <div class="header-row">       <h3>Sergei Gepshtein's Portal</h3></div><br>
+          <div class="header-second-row"><h3> About     </h3></div><br>
+      </div> 
+    </header>
+    <div>
+      Dr. Sergei Gepshtein is a scientist working in the areas of perceptual
+      psychology, systems neuroscience, and computational neuroscience. His
+      research interests include perception of visual depth and movement,
+      perceptual organization, interaction of vision with other senses, planning
+      of multistep actions, perception of high-dimensional visual pasterns, such
+      as faces, dynamics of cortical neural networks, their modeling and
+      simulation.
+      <br /><br />
+      For the last 17 years he has been a member of the Center for the
+      Neurobiology of Vision at the Salk Institute for Biological Studies in La
+      Jolla, California, where he studies perception and active behavior from
+      the mechanistic perspective of neuroscience and from a perspective that
+      respects experience as a self-contained area of research.
+      <br /><br />
+      He directs studies of Adaptive Sensory Technologies at the Salk Institute
+      with the goal to translate results of basic science for applications
+      ranging from immersive visual technologies and adaptive sighting devices
+      to urban design and forensic science. Recently, he joined the faculty of
+      the University of Southern California, Los Angeles, where he directs the
+      Center for Spatial Perception & Concrete Experience: a platform for
+      investigating spatial experience as a natural narrative process.
+      <br /><br />
+      His work has been supported by grants and awards from the National Eye
+      Institute, the National Institute on Aging, the National Science
+      Foundation, the Kavli Institute for Brain and Mind, the Swartz Foundation
+      for Theoretical Neuroscience, and the National Institutes of Natural
+      Sciences of Japan.
+      <br /><br />
+      On the applied and translational sides of scientific work, he is
+      increasingly interested in studies of the built environment and design of
+      immersive media: as a founding member of the World Building Institute, as
+      the inaugural recipient of the Harold Hay Research Award from the Academy
+      of Neuroscience for Architecture (ANFA) and as a member of the Freeman
+      Design Leadership Council (now Emeritus). In 2016 he joined the Board of
+      Directors of ANFA, to further the growing understanding of human response
+      to the built environment. In 2026 he will serve as the President of ANFA.
+      <br /><br />
+      In teaching and education, he has developed a curriculum that integrates
+      diverse concepts of space from the disciplines of science and design,
+      using it to teach undergraduate and graduate courses at the University of
+      Southern California in Los Angeles, the New School of Architecture and
+      Design in San Diego, and the University of California San Diego. Dr.
+      Sergei Gepshtein is a scientist working in the areas of perceptual
+      psychology, systems neuroscience, and computational neuroscience. His
+      research interests include perception of visual depth and movement,
+      perceptual organization, interaction of vision with other senses, planning
+      of multistep actions, perception of high-dimensional visual pasterns, such
+      as faces, dynamics of cortical neural networks, their modeling and
+      simulation.
+      <br /><br />
+      For the last 17 years he has been a member of the Center for the
+      Neurobiology of Vision at the Salk Institute for Biological Studies in La
+      Jolla, California, where he studies perception and active behavior from
+      the mechanistic perspective of neuroscience and from a perspective that
+      respects experience as a self-contained area of research.
+      <br /><br />
+      He directs studies of Adaptive Sensory Technologies at the Salk Institute
+      with the goal to translate results of basic science for applications
+      ranging from immersive visual technologies and adaptive sighting devices
+      to urban design and forensic science. Recently, he joined the faculty of
+      the University of Southern California, Los Angeles, where he directs the
+      Center for Spatial Perception & Concrete Experience: a platform for
+      investigating spatial experience as a natural narrative process.
+      <br /><br />
+      His work has been supported by grants and awards from the National Eye
+      Institute, the National Institute on Aging, the National Science
+      Foundation, the Kavli Institute for Brain and Mind, the Swartz Foundation
+      for Theoretical Neuroscience, and the National Institutes of Natural
+      Sciences of Japan.
+      <br /><br />
+      On the applied and translational sides of scientific work, he is
+      increasingly interested in studies of the built environment and design of
+      immersive media: as a founding member of the World Building Institute, as
+      the inaugural recipient of the Harold Hay Research Award from the Academy
+      of Neuroscience for Architecture (ANFA) and as a member of the Freeman
+      Design Leadership Council (now Emeritus). In 2016 he joined the Board of
+      Directors of ANFA, to further the growing understanding of human response
+      to the built environment. In 2026 he will serve as the President of ANFA.
+      <br /><br />
+      In teaching and education, he has developed a curriculum that integrates
+      diverse concepts of space from the disciplines of science and design,
+      using it to teach undergraduate and graduate courses at the University of
+      Southern California in Los Angeles, the New School of Architecture and
+      Design in San Diego, and the University of California San Diego.
+    </div>
+  </body>
 </html>
