--- a/Publications.html
+++ b/Publications.html
@@ -6,7 +6,7 @@
  <link rel="stylesheet" href="styles.css">
  <script src="scripts.js"></script>
  </head> 
- <body> 
+    <body onload="highlightCurrentPage();"> 
 
  <div id = "Publications" class="main">
  <header>
