--- a/About.html
+++ b/About.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="scripts.js"></script>
   </head>
-  <body onload="highlightCurrentPage();"> 
+  <body onload="highlightCurrentPage();getNow()"> 
   <div id = "About" class="main">
     <header>
       <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
@@ -109,5 +109,6 @@
       Southern California in Los Angeles, the New School of Architecture and
       Design in San Diego, and the University of California San Diego.
     </div>
+    <div id="getNow"><font size="1">Updated in</font> </div>
   </body>
 </html>
