--- a/About.html
+++ b/About.html
@@ -108,7 +108,7 @@
       using it to teach undergraduate and graduate courses at the University of
       Southern California in Los Angeles, the New School of Architecture and
       Design in San Diego, and the University of California San Diego.
-    </div>
+    </div></div></div>
     <div id="getNow"><font size="1">Updated in</font> </div>
   </body>
 </html>
