--- a/Publications.html
+++ b/Publications.html
@@ -5,7 +5,7 @@
 <head>
  <meta charset="UTF-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Publication</title>
+ <title>Publications</title>
  <link rel="stylesheet" href="styles.css">
  <script src="scripts.js"></script>
  </head> 
@@ -15,14 +15,16 @@
  <header>
 <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
 <nav id="menu" class="hidden"> 
-<ul> 
-<li><a href="About.html">About</a></li> 
-<li><a href="Publications.html">Publications</a></li>
+<ul>
+<li><a href="About
+.html">About
+</a></li> 
+<li><a href="Publications.html">Publications</a></li> 
 <li><a href="Projects.html">Projects</a></li> 
 </ul> 
 </nav>
  <div class="header-content"><div class="header-row"><h3>Sergei Gepshtein's Portal</h3></div><br>
- <div class="header-second-row"> <h3> Publications: a sample</h3> </div><br>  </div> </header>
+ <div class="header-second-row"> <h3>Publications (test)</h3> </div><br>  </div> </header>
 <button id="Filter" onclick = "toggleDisplay();"> Filter</button>
 <button onclick="processSelection()">Apply</button>
 <span id ="Btns" class="btns">
@@ -121,12 +123,12 @@
 <span> &#9679; <a href="https://journals.plos.org/ploscompbiol/article/file?id=10.1371/journal.pcbi.1004501&type=printable "> PDF</a> </span><br>
  <hr></div>
 
-<div id="Article_7" class = "article"><span class="title">Dopamine function and the efficiency of human movement</span><p>  Journal of Cognitive Neuroscience 2014 </p><p> To sustain successful behavior in dynamic environments, organisms must learn from their actions and predict action outcomes. Dopamine plays a key role in this process, encoding differences between expected and actual outcomes. A study on Parkinson's disease patients with dopamine depletion showed that while they performed well in low-energy tasks, their performance declined significantly in high-energy tasks, highlighting dopamine's role in mediating the energy cost of action and efficient planning. </p>
+<div id="Article_7" class = "article"><span class="title">Dopamine function and the efficiency of human movement</span><p> Journal of Cognitive Neuroscience 2014 </p><p> To sustain successful behavior in dynamic environments, organisms must learn from their actions and predict action outcomes. Dopamine plays a key role in this process, encoding differences between expected and actual outcomes. A study on Parkinson's disease patients with dopamine depletion showed that while they performed well in low-energy tasks, their performance declined significantly in high-energy tasks, highlighting dopamine's role in mediating the energy cost of action and efficient planning. </p>
 <button id="Button_7a" onclick="toggle(this);"> [+] Citation</button>
 <button id="Button_7b" onclick="toggle(this);"> [+] Abstract</button>
 <button id="Button_7c" onclick="toggle(this);"> [+] Links</button>
 
-<p class="text"  id="Text_7a"> Gepshtein S, Li X, Snider J, Plank M, Lee D & Poizner H (2014). Dopamine function and the efficiency of human movement. <i> Journal of Cognitive Neuroscience</i> 26 (3), 645-657.</p>
+<p class="text"  id="Text_7a"> Gepshtein S, Li X, Snider J, Plank M, Lee D & Poizner H (2014). Dopamine function and the efficiency of human movement. <i>Journal of Cognitive Neuroscience</i> 26 (3), 645-657.</p>
 <p class="text"  id="Text_7b"> To sustain successful behavior in dynamic environments, active organisms must be able to learn from the consequences of their actions and predict action outcomes. One of the most important discoveries in systems neuroscience over the last 15 years has been about the key role of the neurotransmitter dopamine in mediating such active behavior. Dopamine cell firing was found to encode differences between the expected and obtained outcomes of actions. Although activity of dopamine cells does not specify movements themselves, a recent study in humans has suggested that tonic levels of dopamine in the dorsal striatum may in part enable normal movement by encoding sensitivity to the energy cost of a movement, providing an implicit “motor motivational” signal for movement. We investigated the motivational hypothesis of dopamine by studying motor performance of patients with Parkinson disease who have marked dopamine depletion in the dorsal striatum and compared their performance with that of elderly healthy adults. All participants performed rapid sequential movements to visual targets associated with different risk and different energy costs, countered or assisted by gravity. In conditions of low energy cost, patients performed surprisingly well, similar to prescriptions of an ideal planner and healthy participants. As energy costs increased, however, performance of patients with Parkinson disease dropped markedly below the prescriptions for action by an ideal planner and below performance of healthy elderly participants. The results indicate that the ability for efficient planning depends on the energy cost of action and that the effect of energy cost on action is mediated by dopamine. </p>
 <p class="text"  id="Text_7c">
 <span> &#9679; <a href="https://direct.mit.edu/jocn/article-abstract/26/3/645/28076/Dopamine-Function-and-the-Efficiency-of-Human">Publisher link</a> </span><br>
@@ -174,7 +176,7 @@
 <button id="Button_11b" onclick="toggle(this);"> [+] Abstract</button>
 <button id="Button_11c" onclick="toggle(this);"> [+] Links</button>
 
-<p class="text"  id="Text_11a"> Gepshtein S (2010). Two psychologies of perception and the prospect of their synthesis. <i>Philosophical Psychology</i> 23 (2),  217-281.</p>
+<p class="text"  id="Text_11a"> Gepshtein S (2010). Two psychologies of perception and the prospect of their synthesis. <i>Philosophical Psychology</i> 23 (2), 217-281.</p>
 <p class="text"  id="Text_11b"> Two traditions have had a great impact on the theoretical and experimental research of perception. One tradition is statistical, stretching from Fechner's enunciation of psychophysics in 1860 to the modern view of perception as statistical decision making. The other tradition is phenomenological, from Brentano's “empirical standpoint” of 1874 to the Gestalt movement and the modern work on perceptual organization. Each tradition has at its core a distinctive assumption about the indivisible constituents of perception: the just-noticeable differences of sensation in the tradition of Fechner vs. the phenomenological Gestalts in the tradition of Brentano. But some key results from the two traditions can be explained and connected using an approach that is neither statistical nor phenomenological. This approach rests on a basic property of any information exchange: a principle of measurement formulated in 1946 by Gabor as a part of his quantal theory of information. Here the indivisible components are units (quanta) of information that remain invariant under changes of precision of measurement. This approach helped to understand how sensory measurements are implemented by single neural cells. But recent analyses suggest that this approach has the power to explain larger-scale characteristics of sensory systems. </p>
 <p class="text"  id="Text_11c">
 <span> &#9679; <a href="https://www.tandfonline.com/doi/full/10.1080/09515081003727483">Publisher link</a> </span><br>
@@ -241,5 +243,5 @@
 <span> &#9679; <a href="http://vcl.salk.edu/~gepshtein/papers/GepshteinKubovy_PNAS2000.pdf "> PDF</a> </span><br>
  <hr></div>
 ></div>
-<div><font size="1" face="Calibri">Updated in July 14, 2024 at 1:00 PM PDT</font> </div
+<div><font size="1" face="Calibri">Updated in July 14, 2024 at 4:44 PM PDT</font> </div
 </body></html>
