--- a/About.html
+++ b/About.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="scripts.js"></script>
   </head>
-  <body onload="highlightCurrentPage();getNow()"> 
+  <!-- <body onload="highlightCurrentPage();getNow()">  -->
+  <body onload="highlightCurrentPage();"> 
   <div id = "About" class="main">
     <header>
       <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
@@ -109,6 +110,7 @@
       Southern California in Los Angeles, the New School of Architecture and
       Design in San Diego, and the University of California San Diego.
     </div></div></div>
-    <div id="getNow"><font size="1">Updated in</font> </div>
+    <div id="getNow"><font size="1">Updated in July 11, 2024 at 9.10 AM PDT</font> </div>
+    <!-- <div id="getNow"><font size="1">Updated in</font> </div> -->
   </body>
 </html>
