--- a/About.html
+++ b/About.html
@@ -14,6 +14,7 @@
       <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
       <nav id="menu" class="hidden">
           <ul> 
+			  <li><a href="Test.html">Test</a></li> 
               <li><a href="About.html">About</a></li> 
               <li><a href="Publications.html">Publications</a></li>
               <li><a href="Projects.html">Projects</a></li> 
