--- a/Publications.html
+++ b/Publications.html
@@ -16,7 +16,7 @@
 <div class="menu-icon" onclick="toggleMenu()">&#9776;</div>
 <nav id="menu" class="hidden"> 
 <ul>
-<li><a href="About.html">AboutAboutAbout</a></li> 
+<li><a href="About.html">About</a></li> 
 <li><a href="Publications.html">Publications</a></li> 
 <li><a href="Projects.html">Projects</a></li> 
 </ul> 
